src/human_study/program_22/python_err_msg.txt
File "./seq2parse/human_study/program_22/original.py", line 4
    for i in a(1:):
              ^
SyntaxError: expected ':'
